update user create & major update

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-PORT=<port>
-DATABASE_URL="mysql://<user>:<password>@localhost:3306/db_absensi"
-ACCES_TOKEN_SECRET=<secret key>
+# Environment
+NODE_ENV=development #development / production
+PORT=3000
+
+# Database
+DATABASE_URL="mysql://tomi:root@localhost:3306/db_absensi"
+ACCES_TOKEN_SECRET=tomi123
