--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-async-handler": "^1.2.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
