--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Environment
 NODE_ENV=development #development / production
-PORT=3000
+PORT=<port number>
 
 # Database
-DATABASE_URL="mysql://tomi:root@localhost:3306/db_absensi"
-ACCES_TOKEN_SECRET=tomi123
+DATABASE_URL="mysql://<username>:<password>@localhost:<port>/db_absensi"
+ACCES_TOKEN_SECRET=
