--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Ini adalah backend untuk aplikasi absensi pada RSUD Raden Mattaher",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,8 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -19,6 +22,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
   },
